--- a/hextechhunt-client/package.json
+++ b/hextechhunt-client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "angular": "^1.5.5",
     "angular-route": "^1.5.5",
+    "http-server": "^0.9.0",
     "jquery": "^2.2.3",
     "q": "^1.4.1"
   }
