Allow for custom IP to host the Server from

--- a/hextechhunt-server/package.json
+++ b/hextechhunt-server/package.json
@@ -4,7 +4,7 @@
   "author": "Adrian Baran",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js $HOST"
   },
   "dependencies" : {
     "express" : "^4.13.1",
